--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -5,9 +5,9 @@
 
 .features {
   @include flex.flex(flex-start, center, column);
-  padding: 2em 0 4em 0;
+  padding: 2em 0;
   & h1 {
-    font-size: 4rem;
+    font-size: clamp(2.5rem, 5vw, 4rem);
     font-weight: map-get(fonts.$font-weight, semi-bold);
     color: colors.$primary-color;
     letter-spacing: 0.1em;
@@ -15,16 +15,20 @@
   }
 
   .no-data {
+    margin: 0 1em;
     & img {
       width: 300px;
+      max-width: 100%;
+      height: auto;
       margin-bottom: 1em;
       object-fit: cover;
     }
 
     & p {
-      font-size: 1.5rem;
+      font-size: clamp(0.875rem, 5vw, 1.5rem);
       font-weight: map-get(fonts.$font-weight, medium);
       color: colors.$primary-color;
+      text-align: center;
     }
   }
 
@@ -35,6 +39,15 @@
       margin: 0 2em;
       user-select: none;
       transition: all 0.25s ease;
+
+      .product-label {
+        display: inline-block;
+        padding: 0.1em 0.5em;
+        background: colors.$sale-color;
+        color: colors.$text-color;
+        border-radius: 5px;
+        text-transform: uppercase;
+      }
 
       & img {
         width: 300px;
@@ -60,17 +73,30 @@
           font-weight: map-get(fonts.$font-weight, regular);
           color: colors.$primary-color;
         }
-        .price {
-          @include flex.flex(flex-start, center, row);
-          font-size: 1.125rem;
-          font-weight: map-get(fonts.$font-weight, medium);
-          color: colors.$primary-color;
-          .peso-sign {
-            margin-right: 0.2em;
+        .price-container {
+          @include flex.flex(center, center, row);
+          .price {
+            @include flex.flex(flex-start, center, row);
+            font-size: 1.125rem;
+            font-weight: map-get(fonts.$font-weight, medium);
             color: colors.$primary-color;
+            .peso-sign {
+              text-decoration: line-through;
+              margin-right: 0.2em;
+              color: colors.$primary-color;
+            }
+          }
+          .sales-amount {
+            margin-left: 0.5em;
+            color: colors.$light-color;
+            text-decoration: line-through;
           }
         }
       }
     }
+  }
+
+  .cta {
+    margin-bottom: 1.5em;
   }
 }
