--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -150,8 +150,11 @@ button {
     transform: scale(1, 1);
   }
 
-  @include media.smallMobile {
+  @include media.laptop {
     font-size: 1rem;
+  }
+  @include media.bigMobile {
+    font-size: 0.875rem;
   }
 }
 //secondary button
@@ -285,7 +288,7 @@ button {
   &:hover::after {
     transform: scale(1, 1);
   }
-  @include media.smallMobile {
+  @include media.bigMobile {
     font-size: 1rem;
   }
 }
