--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -2,6 +2,7 @@
 @use '../abstracts/fonts';
 @use '../layout/flex';
 @use '../layout/grid';
+@use '../components/media';
 
 #checkout-process {
   .checkout-banner {
@@ -12,17 +13,19 @@
     padding: 2.5em 0;
     background: colors.$primary-color;
 
-    & img {
-      width: 120px;
-      margin-left: 19em;
-      object-fit: cover;
+    .banner-logo {
+      & img {
+        width: 120px;
+        margin-left: 19em;
+        object-fit: cover;
+      }
     }
 
     .progress-bar {
       position: relative;
       @include flex.flex(space-between, center, row);
-      width: 100%;
-      max-width: 550px;
+      width: 550px;
+      max-width: 100%;
       margin-left: 5.5em;
       padding: 1.8em 0;
       counter-reset: step;
@@ -66,7 +69,7 @@
           color: colors.$secondary-color;
         }
 
-        .line:not(.last)::after {
+        .step-line:not(.last)::after {
           content: "";
           position: absolute;
           z-index: -1;
@@ -77,7 +80,7 @@
           transform: translateY(-50%);
         }
 
-        .line.active::after {
+        .step-line.active::after {
           background: colors.$secondary-color;
         }
       }
@@ -85,12 +88,12 @@
   }
   .checkout-wrapper {
     @include grid.grid(1fr auto, none, none, 50px);
+    margin: 2em 0;
   }
   .checkout-container {
     width: 805px;
     max-width: 100%;
     .contact-info {
-      margin-top: 2em;
       margin-bottom: 2.5em;
       padding: 1em 2em;
       border: 1px solid colors.$light-color;
@@ -104,10 +107,12 @@
 
       & .user {
         @include flex.flex(flex-start, center, row);
+        flex-wrap: wrap;
         margin-bottom: 0.5em;
         .avatar {
           width: 100px;
           height: 100px;
+          max-width: 100%;
           margin-right: 1em;
           border-radius: 50%;
         }
@@ -169,6 +174,7 @@
       }
       & .second-layer {
         @include flex.flex(space-between, stretch, row);
+        flex-wrap: wrap;
         margin-bottom: 1em;
 
         & .shipping-details {
@@ -217,6 +223,7 @@
     .radio-field {
       position: relative;
       @include flex.flex(flex-start, stretch, row);
+      flex-wrap: wrap;
       margin-bottom: 1em;
       padding: 1em;
       color: colors.$primary-color;
@@ -265,11 +272,6 @@
           height: 20px;
           margin-right: 0.5em;
         }
-        & .gcash {
-          width: 20px;
-          margin-right: 0.5em;
-          object-fit: cover;
-        }
       }
       & .ship-details {
         display: flex;
@@ -277,24 +279,24 @@
         transition: all 0.5s ease-in-out;
         & .del-time {
           margin-right: 5em;
-          font-size: 1rem;
+          font-size: clamp(0.875rem, 2vw, 1rem);
           font-weight: map-get(fonts.$font-weight, medium);
           text-align: center;
 
           & .del-details {
-            font-size: 0.875rem;
+            font-size: clamp(0.75rem, 2vw, 0.875rem);
             font-weight: map-get(fonts.$font-weight, regular);
           }
         }
         & .ship-fee {
-          font-size: 1rem;
+          font-size: clamp(0.875rem, 2vw, 1rem);
           font-weight: map-get(fonts.$font-weight, medium);
           text-align: center;
 
           & .price {
             display: flex;
             justify-content: center;
-            font-size: 0.875rem;
+            font-size: clamp(0.75rem, 2vw, 0.875rem);
             font-weight: map-get(fonts.$font-weight, regular);
             & .peso-sign {
               width: 18px;
@@ -306,7 +308,7 @@
       }
     }
     .button-container {
-      @include flex.flex(space-between, center, row);
+      @include flex.flex(space-between, stretch, row);
       margin-bottom: 5em;
     }
     .back-btn {
@@ -317,6 +319,14 @@
       white-space: nowrap;
       &:hover .left-arrow {
         color: colors.$text-color;
+      }
+      &:hover a {
+        color: colors.$text-color;
+      }
+
+      & a {
+        color: colors.$accent-color;
+        text-decoration: none;
       }
     }
     .next-btn {
@@ -329,7 +339,7 @@
       position: relative;
       top: 3px;
       left: -20px;
-      height: 100%;
+      //height: 100%;
       color: colors.$accent-color;
       transition: color 0.5s ease-in-out;
     }
@@ -337,15 +347,16 @@
       position: relative;
       top: 3px;
       right: -20px;
-      height: 100%;
+      //height: 100%;
       color: colors.$text-color;
     }
   }
   .order-summary {
-    justify-self: center;
+    //justify-self: center;
     width: 345px;
+    max-width: 100%;
     height: fit-content;
-    margin: 1.5em 0 2.5em 0;
+    //margin: 1.5em 0 2.5em 0;
     padding: 1em 1.5em;
     background: colors.$text-color;
     border-radius: 15px;
@@ -458,6 +469,102 @@
           color: colors.$primary-color;
         }
       }
+    }
+  }
+
+  @include media.laptop {
+    .checkout-wrapper {
+      display: block;
+    }
+    .checkout-container {
+      margin: 0 auto;
+
+      .next-btn {
+        font-size: 1.125rem;
+      }
+    }
+    .checkout-banner .banner-logo {
+      display: flex;
+      justify-content: center;
+
+      & img {
+        margin: 0;
+      }
+    }
+    .progress-bar-wrapper {
+      display: flex;
+      justify-content: center;
+
+      .progress-bar {
+        margin: 0 1.5em;
+      }
+    }
+    .order-summary {
+      margin: 2em auto;
+    }
+  }
+
+  @include media.landscapeTablet {
+    .input-group {
+      flex-direction: column;
+    }
+    .input-field {
+      width: 100%;
+    }
+    .input {
+      width: 100%;
+    }
+  }
+
+  @include media.portraitTablet {
+    .checkout-container .button-container {
+      flex-direction: column-reverse;
+    }
+    .checkout-container .button-container .next-btn {
+      width: 100%;
+      margin-bottom: 1em;
+    }
+    .checkout-container .button-container .back-btn {
+      width: 100%;
+    }
+  }
+
+  @include media.bigMobile {
+    .checkout-banner .progress-bar .progress-step .step-line:not(.last)::after {
+      width: 130px;
+    }
+  }
+
+  @include media.mediumMobile {
+    .checkout-container .contact-info .user {
+      justify-content: center;
+    }
+    .checkout-container .contact-info .user .user-details .user-name {
+      text-align: center;
+    }
+    .checkout-container .contact-info .user .edit-btn {
+      width: 100%;
+      margin: 1em 0 0 0;
+    }
+    .checkout-banner .progress-bar .progress-step .step-line:not(.last)::after {
+      width: 100px;
+    }
+    .checkout-container .contact-info .first-layer {
+      flex-direction: column;
+    }
+    .checkout-container .contact-info .first-layer .payment-details {
+      margin-top: 0;
+    }
+  }
+
+  @include media.smallMobile {
+    .checkout-banner .progress-bar .progress-step .step-line:not(.last)::after {
+      width: 80px;
+    }
+  }
+  @include media.mobile {
+    .checkout-banner .progress-bar .progress-step .step-line:not(.last)::after {
+      width: 50px;
     }
   }
 }
