--- a/src/scss/pages/_faq.scss
+++ b/src/scss/pages/_faq.scss
@@ -2,22 +2,24 @@
 @use '../abstracts/fonts';
 @use '../layout/flex';
 @use '../layout/grid';
+@use '../components/media';
 
 #faq-wrapper {
-  padding: 8em 0 2em 0;
+  padding-top: 5em;
 
-  .faq-flex {
-    @include grid.grid(1fr auto, none, none, 0);
+  .faq-grid {
+    @include grid.grid(auto 1fr, none, none, 30px);
+    place-items: center;
+    margin-top: 3em;
+    margin-bottom: 4em;
     & img {
-      align-self: center;
       width: 580px;
+      max-width: 100%;
       object-fit: cover;
     }
 
     .accordion {
       width: 100%;
-      padding: 0 2em;
-      margin: 3em 0;
       .content-box {
         margin: 1em 0;
         padding-bottom: 1em;
@@ -27,13 +29,14 @@
           @include flex.flex(space-between, center, row);
 
           & h4 {
-            font-size: 1.75rem;
+            flex: 0 0 90%;
+            font-size: clamp(1rem, 5vw, 1.75rem);
             font-weight: map-get(fonts.$font-weight, medium);
             color: colors.$primary-color;
           }
 
           & .plus-icon {
-            font-size: 3rem;
+            font-size: clamp(2.125rem, 5vw, 3rem);
             font-weight: map-get(fonts.$font-weight, regular);
             color: colors.$secondary-color;
             transition: transform 0.5s ease;
@@ -46,7 +49,7 @@
           transition: max-height 1s ease;
           & p {
             padding-top: 0.5em;
-            font-size: 1.125rem;
+            font-size: clamp(0.875rem, 3vw, 1.125rem);
             font-weight: map-get(fonts.$font-weight, regular);
             color: colors.$primary-color;
           }
@@ -62,13 +65,20 @@
       }
     }
   }
+
+  @include media.landscapeTablet {
+    .faq-grid {
+      grid-template-columns: 1fr;
+    }
+  }
 }
 
 .faq-container {
   padding: 2em 0 4em 0;
 
   & h1 {
-    font-size: 4rem;
+    margin: 0 0.3em;
+    font-size: clamp(2.5rem, 5vw, 4rem);
     font-weight: map-get(fonts.$font-weight, semi-bold);
     color: colors.$primary-color;
     letter-spacing: 0.1em;
@@ -88,13 +98,14 @@
         @include flex.flex(space-between, center, row);
 
         & h4 {
-          font-size: 1.75rem;
+          flex: 0 0 90%;
+          font-size: clamp(1rem, 5vw, 1.75rem);
           font-weight: map-get(fonts.$font-weight, medium);
           color: colors.$primary-color;
         }
 
         & .plus-icon {
-          font-size: 3rem;
+          font-size: clamp(2.125rem, 5vw, 3rem);
           font-weight: map-get(fonts.$font-weight, regular);
           color: colors.$secondary-color;
           transition: transform 0.5s ease;
@@ -107,7 +118,7 @@
         transition: max-height 1s ease;
         & p {
           padding-top: 0.5em;
-          font-size: 1.125rem;
+          font-size: clamp(0.875rem, 3vw, 1.125rem);
           font-weight: map-get(fonts.$font-weight, regular);
           color: colors.$primary-color;
         }
