--- a/src/scss/pages/_help.scss
+++ b/src/scss/pages/_help.scss
@@ -2,20 +2,20 @@
 @use '../abstracts/fonts';
 
 #privacy-wrapper {
-  padding: 8em 0 2em 0;
+  padding: 5em 0 2em 0;
 
   .policy-container {
-    padding: 5em 2em;
+    padding: 3em 2em 0 2em;
     .content {
       margin-bottom: 1.5em;
       & h1 {
-        font-size: 2.5rem;
+        font-size: clamp(1.75rem, 5vw, 2.3rem);
         font-weight: map-get(fonts.$font-weight, semi-bold);
         color: colors.$primary-color;
       }
 
       & p {
-        font-size: 1.25rem;
+        font-size: clamp(0.9375rem, 3vw, 1.25rem);
         font-weight: map-get(fonts.$font-weight, regular);
         color: colors.$primary-color;
       }
