--- a/src/scss/pages/_orderconfirmed.scss
+++ b/src/scss/pages/_orderconfirmed.scss
@@ -2,16 +2,18 @@
 @use '../abstracts/fonts';
 @use '../layout/flex';
 @use '../layout/grid';
+@use '../components/media';
 
 #confirmation {
-  padding: 8em 0;
+  //padding: 8em 0;
+  padding-top: 8em;
 
   & .confirmation-container {
     @include flex.flex(center, center, column);
   }
   & h1 {
     margin-bottom: 0.5em;
-    font-size: 4rem;
+    font-size: clamp(2rem, 7vw, 4rem);
     font-weight: map-get(fonts.$font-weight, semi-bold);
     color: colors.$primary-color;
     letter-spacing: 0.1em;
@@ -19,20 +21,20 @@
   }
   & img {
     margin-bottom: 1em;
+    width: 500px;
     max-width: 100%;
-    height: auto;
   }
 
   & .confirmation-details {
     margin-bottom: 3em;
     & .confirmation-notif {
-      font-size: 1.5rem;
+      font-size: clamp(1rem, 5vw, 1.5rem);
       font-weight: map-get(fonts.$font-weight, medium);
       color: colors.$primary-color;
       text-align: center;
     }
     & p {
-      font-size: 1.125rem;
+      font-size: clamp(0.875rem, 4vw, 1.125rem);
       font-weight: map-get(fonts.$font-weight, regular);
       color: colors.$primary-color;
       text-align: center;
@@ -64,6 +66,24 @@
         left: -3px;
         height: 100%;
       }
+    }
+  }
+
+  @include media.laptop {
+    .button-container .right-btn {
+      font-size: 1.125rem;
+    }
+  }
+  @include media.bigMobile {
+    .button-container .left-btn {
+      margin-bottom: 1em;
+    }
+    .button-container .right-btn,
+    .button-container .left-btn {
+      width: 100%;
+    }
+    .button-container .right-btn {
+      font-size: 1rem;
     }
   }
 }
