--- a/src/scss/pages/_pagenotfound.scss
+++ b/src/scss/pages/_pagenotfound.scss
@@ -3,26 +3,30 @@
 @use '../layout/flex';
 
 #page-not-found {
-  padding: 8em 0;
+  padding: 8em 0 3em 0;
 
   .wrapper {
     @include flex.flex(center, center, column);
+    margin-bottom: 1em;
     & img {
       width: 700px;
+      max-width: 100%;
       margin-bottom: 1em;
       object-fit: cover;
     }
     & h4 {
-      font-size: 2.5rem;
+      font-size: clamp(1.25rem, 5vw, 2.5rem);
       font-weight: map-get(fonts.$font-weight, semi-bold);
       color: colors.$primary-color;
       letter-spacing: 0.1em;
+      text-align: center;
     }
     & p {
-      margin-bottom: 2.5em;
-      font-size: 1.125rem;
+      margin-bottom: 2em;
+      font-size: clamp(0.875rem, 3vw, 1.125rem);
       font-weight: map-get(fonts.$font-weight, regular);
       color: colors.$primary-color;
+      text-align: center;
     }
     .back-btn {
       box-shadow: none;
