--- a/src/scss/pages/_track.scss
+++ b/src/scss/pages/_track.scss
@@ -2,6 +2,7 @@
 @use "../abstracts/fonts";
 @use "../layout/flex";
 @use "../layout/grid";
+@use "../components/media";
 
 #track-order {
   padding: 8em 0 4em 0;
@@ -13,17 +14,19 @@
     .card-body {
       position: relative;
       overflow: hidden;
-      @include grid.grid(1fr 2fr, none, none, 0);
-      width: 100%;
-      max-width: 1196px;
+      //@include grid.grid(1fr 2fr, none, none, 0);
+      @include flex.flex(space-between, stretch, row);
+      flex-wrap: wrap;
+      width: fit-content;
+      max-width: 100%;
       height: fit-content;
       background: colors.$text-color;
       border-radius: 15px;
       box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
 
       .progress-bar {
-        grid-column: 1/2;
-        grid-row: 1/4;
+        // grid-column: 1/2;
+        // grid-row: 1/4;
         padding: 1em;
         @include flex.flex(flex-start, center, row);
         border-right: 1px solid colors.$disabled-color;
@@ -78,10 +81,11 @@
       }
 
       .user-details {
-        grid-column: 2/3;
-        grid-row: 1/2;
+        // grid-column: 2/3;
+        // grid-row: 1/2;
         @include flex.flex(space-between, center, row);
         flex-wrap: wrap;
+        width: 100%;
         padding: 1em;
         border-bottom: 1px solid colors.$disabled-color;
 
@@ -111,8 +115,8 @@
       }
 
       .item-details {
-        grid-column: 2/3;
-        grid-row: 2/3;
+        // grid-column: 2/3;
+        // grid-row: 2/3;
         @include flex.flex(space-between, center, row);
         flex-wrap: wrap;
         padding: 1em;
@@ -222,6 +226,58 @@
           }
         }
       }
+    }
+  }
+
+  @include media.laptop {
+    .wrapper .card-body .buttons .back-btn {
+      font-size: 1.125rem;
+    }
+  }
+  @include media.landscapeTablet {
+    .wrapper .card-body {
+      flex-direction: column;
+    }
+    .wrapper .card-body .progress-bar {
+      border-right: 0;
+      border-bottom: 1px solid colors.$disabled-color;
+    }
+  }
+
+  @include media.bigMobile {
+    .wrapper .card-body .buttons .disabled-btn {
+      margin-bottom: 1em;
+      width: 100%;
+    }
+    .wrapper .card-body .buttons .back-btn {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  @include media.mediumMobile {
+    .wrapper .card-body .item-details {
+      flex-direction: column;
+    }
+    .wrapper .card-body .item-details .billing-statement .payments h4 {
+      justify-content: center;
+    }
+    .wrapper
+      .card-body
+      .item-details
+      .billing-statement
+      .payments
+      .price-container {
+      justify-content: center;
+    }
+  }
+
+  @include media.smallMobile {
+    .wrapper .card-body .progress-bar ul {
+      padding-left: 5em;
+    }
+    .wrapper .card-body {
+      display: block;
     }
   }
 }
